<resources>
    <string name="app_name">chatapp</string>
    <string name="create_an_account">create an account</string>
    <string name="create_account">create account</string>
    <string name="welcome_to_letschat">Welcome to LetsChat</string>
    <string name="already_have_an_account">already have an account</string>
    <string name="login_account">Login Account</string>
    <string name="username">username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_users">Search users</string>
    <string name="change_status">change status</string>
    <string name="display_name">display name</string>
    <string name="hey_there_i_m_using_letschat">Hey there, I am using LetsChat</string>
    <string name="enter_your_status">Enter Your Status</string>
    <string name="save_changes">Save Changes</string>
</resources>