<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    android:background="@color/primary_color_dark">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/welcome_to_letschat"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/start_create_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_below="@id/welcome"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:backgroundTint="#0A1833"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/start_already_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:layout_below="@id/start_create_btn"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:textStyle="bold"
        android:backgroundTint="#371212"
        android:textColor="@color/white"/>




</RelativeLayout>