<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@drawable/profilepic"/>

            <TextView
                android:id="@+id/profile_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_below="@id/profile_pic"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:textColor="@color/primary_color"
                android:textStyle="bold"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/profile_status"
                android:layout_below="@+id/profile_username"
                android:layout_centerHorizontal="true"
                android:text="@string/hey_there_i_m_using_letschat"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"/>




        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/settings_change_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="change image"
        android:layout_below="@+id/card_view"
        android:layout_marginTop="100dp"
        android:backgroundTint="#EAD1D1"
        android:textColor="@color/primary_color"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:padding="15dp"/>

    <Button
        android:id="@+id/settings_change_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_status"
        android:layout_below="@id/settings_change_image"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/primary_color"
        android:textSize="15dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:padding="15dp"/>


</RelativeLayout>